--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
-/* Start coding here */
+.container{
+    background-color: lightgrey;
+    width: 100vw;
+    height: 100vh;
+    padding: 50px;
+}
+.box-1{
+    background-color: orange;
+    width: 100%;
+    height: 25%;
+}
+.box-2{
+    background-color: khaki;
+    width: 100%;
+    height: 25%;
+}
+.box-3{
+    background-color: cornflowerblue;
+    width: 100%;
+    height: 50%;
+}
